--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v0.0.6
+- fix missing lib 
+- add content menu play whole episodes 增加右键菜单剧集自动播放
+- add choose quality 增加选择清晰度
+
 v0.0.5
 - fix search exception 修复一个搜索的错误
 
